# rustr

./: Cargo.toml
adder/: Cargo.toml
adder/src/: lib.rs
adder/tests/: add.rs
communicator/: Cargo.toml
communicator/src/: main.rs
minigrep/: Cargo.toml
minigrep/src/: lib.rs  main.rs
minigrep/tests/: config.rs
