[package]
name = "rustr"
version = "0.1.0"
authors = ["Bo Lopker <blopker@23andme.com>"]

[dependencies]
rand = "0.5.4"
communicator = { path = "../communicator" }

[[bin]]
name = "guess"
path = "src/bin/guess.rs"

[[bin]]
name = "three"
path = "src/bin/three.rs"

[[bin]]
name = "four"
path = "src/bin/four.rs"

[[bin]]
name = "five"
path = "src/bin/five.rs"

[[bin]]
name = "rectangle"
path = "src/bin/rectangle.rs"

[[bin]]
name = "enum"
path = "src/bin/enum.rs"

[[bin]]
name = "match"
path = "src/bin/match.rs"

[[bin]]
name = "modules"
path = "src/bin/modules.rs"

[[bin]]
name = "collections"
path = "src/bin/collections.rs"

[[bin]]
name = "strings"
path = "src/bin/strings.rs"

[[bin]]
name = "hash"
path = "src/bin/hash.rs"

[[bin]]
name = "eight"
path = "src/bin/eight.rs"

[[bin]]
name = "errors"
path = "src/bin/errors.rs"

[[bin]]
name = "generics"
path = "src/bin/generics.rs"

[[bin]]
name = "traits"
path = "src/bin/traits.rs"

[[bin]]
name = "lifetime"
path = "src/bin/lifetime.rs"
